force-app/main/default/objects/FAP_Specification__c/FAP_Specification__c.object-meta.xml
<CustomObject>
    <description>All dynamic requirements for items on the FAP can be designated in this object</description>
    <label>FAP Specification</label>
    <nameField>
        <label>FAP Definitions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAP Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>