force-app/main/default/objects/FAP_Specification__c/fields/Alternate_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Attachment__c</fullName>
    <description>if only 1 of 2 attachments is required, the sibling requirement can be input here</description>
    <inlineHelpText>input the api name of an attachment that works as an alternate</inlineHelpText>
    <label>Alternate Attachment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>