force-app/main/default/objects/FAP_Specification__c/fields/Attachment_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Prefix__c</fullName>
    <label>Attachment Prefix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>