force-app/main/default/objects/FAP_Specification__c/fields/File_Varies_by_Opp__c.field-meta.xml
<CustomField>
    <fullName>File_Varies_by_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this box is checked then the contract will be attached to the opportunity</description>
    <label>File Varies by Opp</label>
    <type>Checkbox</type>
</CustomField>