force-app/main/default/objects/FAP_Specification__c/fields/FTL__c.field-meta.xml
<CustomField>
    <fullName>FTL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if the attachment is required if the opp has the LTL box checked</description>
    <label>FTL</label>
    <type>Checkbox</type>
</CustomField>