force-app/main/default/objects/FAP_Specification__c/fields/LTL__c.field-meta.xml
<CustomField>
    <fullName>LTL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if the attachment is required if the opp has the LTL box checked</description>
    <label>LTL</label>
    <type>Checkbox</type>
</CustomField>