force-app/main/default/objects/FAP_Specification__c/fields/Need_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTM/Dur Reqd</label>
    <type>Checkbox</type>
</CustomField>