force-app/main/default/objects/FAP_Specification__c/fields/Stage_Required_At__c.field-meta.xml
<CustomField>
    <fullName>Stage_Required_At__c</fullName>
    <label>Stage Required At</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- Prospect</fullName>
            </value>
            <value>
                <fullName>2- Qualify/Audit</fullName>
            </value>
            <value>
                <fullName>3- Project Identified</fullName>
            </value>
            <value>
                <fullName>4- Demo/RFQ</fullName>
            </value>
            <value>
                <fullName>5- Proposal</fullName>
            </value>
            <value>
                <fullName>6-Closing Presentation to Decision Maker</fullName>
            </value>
            <value>
                <fullName>7- Verbal Commitment</fullName>
            </value>
            <value>
                <fullName>8- Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>