force-app/main/default/objects/FAP_Specification__c/fields/WH__c.field-meta.xml
<CustomField>
    <fullName>WH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if the attachment is required if the opp has the WH box checked</description>
    <label>WH</label>
    <type>Checkbox</type>
</CustomField>