force-app/main/default/objects/FAP_Specification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Stage_Required_At__c</columns>
    <columns>File_Varies_by_Opp__c</columns>
    <columns>Need_Date__c</columns>
    <columns>WH__c</columns>
    <columns>LTL__c</columns>
    <columns>FTL__c</columns>
    <columns>Alternate_Attachment__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>